Synopsis/Parsers/C/ctool/regression/reject0/run/min.c

#include <stdio.h>

//#define MIN(X,Y)    This is a macro
//#define MAX (X,Y)    This is not

struct fob {
    int hi;
 };

char *file_list[5];

main()
{
   fopen(file_list[0],"r");
}

/*  ###############################################################  */
